--- a/layout.css
+++ b/layout.css
@@ -1,6 +1,6 @@
 :root{
-    --primary_color: #4A6E4CFF;
-    --primary_color_hover: #52ab58;
+    --primary_color: #575a5c;
+    --primary_color_hover: #56b0b7;
     --secondary_color:#e5e8ec;
     --radius: 7px;
 
