--- a/layout.css
+++ b/layout.css
@@ -31,7 +31,7 @@ header{
 header #menu{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
     border-top: 1px solid var(--secondary_color);
 
 
@@ -40,7 +40,7 @@ header #menu{
 header > #menu > span{
     background-color: var(--primary_color);
     padding: 1em;
-    flex: 1 1 4em;
+    flex: 0 1 4em;
 
     text-align: center;
     font-size: larger;
