--- a/layout.css
+++ b/layout.css
@@ -1,5 +1,5 @@
 :root{
-    --primary_color: #231148;
+    --primary_color: #4f06ea;
     --primary_color_hover: #56b0b7;
     --secondary_color:#e5e8ec;
     --radius: 7px;
