--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -22,10 +22,6 @@ header,
   grid-area: header;
   -webkit-box-shadow: 2px 2px 5px 0 black;
           box-shadow: 2px 2px 5px 0 black;
-}
-
-header nav,
-.header nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -35,18 +31,18 @@ header nav,
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-left: 1rem;
 }
 
-header nav #logo,
-.header nav #logo {
+header #logo,
+.header #logo {
   color: #3f6407;
+  margin-left: 1rem;
   font-weight: 700;
   font-size: x-large;
 }
 
-header nav ul,
-.header nav ul {
+header ul,
+.header ul {
   list-style: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -55,20 +51,25 @@ header nav ul,
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  gap: .5rem;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
 }
 
-header nav ul li,
-.header nav ul li {
-  padding: .5rem;
+header ul li,
+.header ul li {
+  padding: 1rem 2rem;
   cursor: pointer;
 }
 
-header nav ul li:hover,
-.header nav ul li:hover {
+header ul li:hover,
+.header ul li:hover {
+  background-color: #3f6407;
+  color: whitesmoke;
+}
+
+header ul li.active,
+.header ul li.active {
   background-color: #3f6407;
   color: whitesmoke;
 }
@@ -80,7 +81,7 @@ aside,
   grid-area: aside;
   background-color: #221919;
   color: whitesmoke;
-  padding: 1rem 0;
+  padding: 1.5rem 0;
 }
 
 aside ul,
@@ -90,11 +91,18 @@ aside ul,
 
 aside ul li,
 .aside ul li {
-  padding: 0 1rem;
+  padding: 1rem 1rem;
 }
 
 aside ul li:hover,
 .aside ul li:hover {
+  background-color: greenyellow;
+  color: #221919;
+  cursor: pointer;
+}
+
+aside ul li.active,
+.aside ul li.active {
   background-color: greenyellow;
   color: #221919;
 }
@@ -106,7 +114,7 @@ main,
   grid-area: main;
   background-color: #3a3434;
   color: whitesmoke;
-  padding: 1rem;
+  padding: 1.5rem;
 }
 
 #side-wrapper {
