Struktur für die Beschreibung der Aufgaben vorbereitet

--- a/assets/style/scss/layout/_grid.scss
+++ b/assets/style/scss/layout/_grid.scss
@@ -2,8 +2,8 @@
     min-height: 100vh;
     display: grid;
     grid-template-areas: "header header"
-               "aside main"
+               "main aside"
                "footer footer";
-    grid-template-columns: auto 1fr;
+    grid-template-columns: 1fr  auto;
     grid-template-rows: auto 1fr auto;
 }
