--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -22,6 +22,7 @@ header,
   grid-area: header;
   -webkit-box-shadow: 2px 2px 5px 0 black;
           box-shadow: 2px 2px 5px 0 black;
+  z-index: 10;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -47,6 +48,7 @@ header ul,
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 100px;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -58,7 +60,7 @@ header ul,
 
 header ul li,
 .header ul li {
-  padding: 1rem 2rem;
+  padding: 1rem 1rem;
   cursor: pointer;
 }
 
@@ -77,7 +79,7 @@ header ul li.active,
 aside,
 .aside {
   -ms-grid-row: 2;
-  -ms-grid-column: 1;
+  -ms-grid-column: 2;
   grid-area: aside;
   background-color: #221919;
   color: whitesmoke;
@@ -91,7 +93,7 @@ aside ul,
 
 aside ul li,
 .aside ul li {
-  padding: 1rem 1rem;
+  padding: 1rem .75rem;
 }
 
 aside ul li:hover,
@@ -110,7 +112,7 @@ aside ul li.active,
 main,
 .main {
   -ms-grid-row: 2;
-  -ms-grid-column: 2;
+  -ms-grid-column: 1;
   grid-area: main;
   background-color: #3a3434;
   color: whitesmoke;
@@ -121,9 +123,9 @@ main,
   min-height: 100vh;
   display: -ms-grid;
   display: grid;
-      grid-template-areas: "header header" "aside main" "footer footer";
-  -ms-grid-columns: auto 1fr;
-      grid-template-columns: auto 1fr;
+      grid-template-areas: "header header" "main aside" "footer footer";
+  -ms-grid-columns: 1fr  auto;
+      grid-template-columns: 1fr  auto;
   -ms-grid-rows: auto 1fr auto;
       grid-template-rows: auto 1fr auto;
 }
@@ -142,5 +144,10 @@ body {
 
 * {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+h1 {
+  padding-bottom: 1rem;
+  font-family: serif;
 }
 /*# sourceMappingURL=main.css.map */
