--- a/assets/style/scss/base/_typography.scss
+++ b/assets/style/scss/base/_typography.scss
@@ -1,3 +1,8 @@
 *{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+h1{
+    padding-bottom: 1rem;
+    font-family: serif;
+}
