--- a/assets/style/scss/layout/_sidebar.scss
+++ b/assets/style/scss/layout/_sidebar.scss
@@ -4,12 +4,14 @@ aside,
     background-color: $background-color-darker;
     color: $white-font-color;
     padding: 1.5rem 0;
+    
 
     ul{
         list-style: none;
-
+    
+        
         li{
-            padding: 1rem 1rem;
+            padding: 1rem .75rem;
             
             &:hover{
                 background-color: $primary-color;
