--- a/assets/style/scss/base/_typography.scss
+++ b/assets/style/scss/base/_typography.scss
@@ -2,7 +2,6 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-h1{
+h1, h2, h3{
     padding-bottom: 1rem;
-    font-family: serif;
 }
