added some animations for smoother look

--- a/assets/style/scss/layout/_main.scss
+++ b/assets/style/scss/layout/_main.scss
@@ -1,7 +1,8 @@
-main,
-.main{
+#center-section
+{
     grid-area: main;
     background-color: $background-color;
     color: $white-font-color;
     padding: 1.5rem;
+    position: relative;
 }
