--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -6,7 +6,6 @@ footer,
 .footer {
   -ms-grid-row: 3;
   -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
   grid-area: footer;
   background-color: greenyellow;
   color: #3f6407;
@@ -18,7 +17,6 @@ header,
   background-color: greenyellow;
   -ms-grid-row: 1;
   -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
   grid-area: header;
   -webkit-box-shadow: 2px 2px 5px 0 black;
           box-shadow: 2px 2px 5px 0 black;
@@ -48,7 +46,6 @@ header ul,
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 100px;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -78,12 +75,20 @@ header ul li.active,
 
 aside,
 .aside {
-  -ms-grid-row: 2;
-  -ms-grid-column: 2;
-  grid-area: aside;
-  background-color: #221919;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  background-color: rgba(34, 25, 25, 0.9);
   color: whitesmoke;
   padding: 1.5rem 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 15rem;
+  z-index: 10;
+  -webkit-animation: slideIn .5s linear forwards;
+          animation: slideIn .5s linear forwards;
 }
 
 aside ul,
@@ -109,23 +114,35 @@ aside ul li.active,
   color: #221919;
 }
 
-main,
-.main {
+@-webkit-keyframes slideIn {
+  0% {
+    width: 0;
+  }
+}
+
+@keyframes slideIn {
+  0% {
+    width: 0;
+  }
+}
+
+#center-section {
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   grid-area: main;
   background-color: #3a3434;
   color: whitesmoke;
   padding: 1.5rem;
+  position: relative;
 }
 
 #side-wrapper {
   min-height: 100vh;
   display: -ms-grid;
   display: grid;
-      grid-template-areas: "header header" "main aside" "footer footer";
-  -ms-grid-columns: 1fr  auto;
-      grid-template-columns: 1fr  auto;
+      grid-template-areas: "header" "main" "footer";
+  -ms-grid-columns: auto;
+      grid-template-columns: auto;
   -ms-grid-rows: auto 1fr auto;
       grid-template-rows: auto 1fr auto;
 }
@@ -142,7 +159,9 @@ main,
 
 figure {
   text-align: center;
-  margin: 2rem;
+  margin: 2rem auto;
+  width: 70%;
+  display: block;
 }
 
 figure img {
