--- a/assets/style/scss/abstracts/_colors.scss
+++ b/assets/style/scss/abstracts/_colors.scss
@@ -2,4 +2,5 @@ $primary-color: greenyellow;
 $secondary-color: rgb(63, 100, 7);
 $background-color: rgb(58, 52, 52);
 $background-color-darker: rgb(34, 25, 25);
+$background-color-darker-opac: rgba(34, 25, 25, 0.9);
 $white-font-color: whitesmoke;
