--- a/assets/style/scss/layout/_grid.scss
+++ b/assets/style/scss/layout/_grid.scss
@@ -1,9 +1,9 @@
 #side-wrapper{
     min-height: 100vh;
     display: grid;
-    grid-template-areas: "header header"
-               "main aside"
-               "footer footer";
-    grid-template-columns: 1fr  auto;
+    grid-template-areas: "header"
+               "main"
+               "footer";
+    grid-template-columns: auto;
     grid-template-rows: auto 1fr auto;
 }
