--- a/assets/style/scss/layout/_sidebar.scss
+++ b/assets/style/scss/layout/_sidebar.scss
@@ -1,10 +1,15 @@
 aside,
 .aside{
-    grid-area: aside;
-    background-color: $background-color-darker;
+    user-select: none;
+    background-color: $background-color-darker-opac;
     color: $white-font-color;
     padding: 1.5rem 0;
-    
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 15rem;
+    z-index: 10;
+    animation: slideIn .5s linear forwards;
 
     ul{
         list-style: none;
@@ -27,3 +32,8 @@ aside,
     }
 }
 
+@keyframes slideIn {
+    0%{
+        width: 0;
+    }
+}
