--- a/assets/style/scss/pages/_home.scss
+++ b/assets/style/scss/pages/_home.scss
@@ -1,6 +1,9 @@
 figure{
     text-align: center;
-    margin: 2rem;
+    margin: 2rem auto;
+    width: 70%;
+    display: block;
+
     img{
         max-width: 70%;
     }
