--- a/assets/style/scss/abstracts/_colors.scss
+++ b/assets/style/scss/abstracts/_colors.scss
@@ -1,5 +1,5 @@
 $primary-color: greenyellow;
-$secondary-color: rgb(63, 100, 7);
+$secondary-color: rgba(63, 100, 7, 0.445);
 $background-color: rgb(58, 52, 52);
 $background-color-darker: rgb(34, 25, 25);
 $background-color-darker-opac: rgba(34, 25, 25, 0.9);
