--- a/assets/style/scss/layout/_main.scss
+++ b/assets/style/scss/layout/_main.scss
@@ -5,4 +5,18 @@
     color: $white-font-color;
     padding: 1.5rem;
     position: relative;
+    overflow-x: hidden;
+}
+
+#hider{
+    background-color: rgba(0, 0, 0, .6);
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 5;
+    display: none;
+
+    
 }
