--- a/assets/style/scss/abstracts/_colors.scss
+++ b/assets/style/scss/abstracts/_colors.scss
@@ -1,5 +1,5 @@
-$primary-color: greenyellow;
-$secondary-color: rgba(63, 100, 7, 0.445);
+$primary-color: rgb(184, 204, 193);
+$secondary-color:rgba(58, 108, 100 , 1); 
 $background-color: rgb(58, 52, 52);
 $background-color-darker: rgb(34, 25, 25);
 $background-color-darker-opac: rgba(34, 25, 25, 0.9);
