--- a/assets/style/scss/main.scss
+++ b/assets/style/scss/main.scss
@@ -5,6 +5,8 @@
 
 @charset 'UTF-8';
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 @import 'abstracts/mixins';
 @import 'abstracts/colors';
 
@@ -17,6 +19,7 @@
 @import 'components/buttons';
 @import 'components/questionBox';
 @import 'components/figures';
+@import 'components/taskCard';
 
 @import 'pages/home';
 
