--- a/assets/style/scss/layout/_main.scss
+++ b/assets/style/scss/layout/_main.scss
@@ -1,7 +1,8 @@
 #center-section
 {
     grid-area: main;
-    background-color: $background-color;
+    background: rgb(75,75,75);
+    background: radial-gradient(circle, rgba(75,75,75,1) 50%, rgba(45,45,45,1) 100%);
     color: $white-font-color;
     padding: 1.5rem;
     position: relative;
@@ -17,6 +18,4 @@
     left: 0;
     z-index: 5;
     display: none;
-
-    
 }
