--- a/assets/style/scss/layout/_main.scss
+++ b/assets/style/scss/layout/_main.scss
@@ -19,3 +19,9 @@
     z-index: 5;
     display: none;
 }
+
+#html-section{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
