--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -157,8 +157,10 @@ aside ul li.active,
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 #side-wrapper {
