--- a/assets/style/scss/base/_reset.scss
+++ b/assets/style/scss/base/_reset.scss
@@ -6,8 +6,14 @@
 
 body{
     min-height: 100%;
+    overflow-x: hidden;
 }
 
 h1{
     font-size: 1.75rem
+}
+
+acronym{
+    text-decoration: underline 2px solid $primary-color;
+    cursor: help;
 }
