--- a/assets/style/scss/abstracts/_colors.scss
+++ b/assets/style/scss/abstracts/_colors.scss
@@ -1,6 +1,6 @@
-$primary-color: rgb(184, 204, 193);
+$primary-color: #b8ccc1;
 $secondary-color:rgba(58, 108, 100 , 1); 
-$background-color: rgb(58, 52, 52);
+$background-color: #3a3434;
 $background-color-darker: rgb(34, 25, 25);
 $background-color-darker-opac: rgba(34, 25, 25, 0.9);
 $white-font-color: whitesmoke;
