--- a/assets/style/scss/layout/_footer.scss
+++ b/assets/style/scss/layout/_footer.scss
@@ -2,6 +2,6 @@ footer,
 .footer{
     grid-area: footer;
     background-color: $primary-color;
-    color: $secondary-color;
+    color: $background-color;
     text-align: center;
 }
