--- a/assets/style/scss/main.scss
+++ b/assets/style/scss/main.scss
@@ -5,7 +5,7 @@
 
 @charset 'UTF-8';
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fredoka&display=swap');
 
 @import 'abstracts/mixins';
 @import 'abstracts/colors';
