--- a/assets/js/components/lit/counter/index.html
+++ b/assets/js/components/lit/counter/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <script type="module" src='counter-element.mjs'></script>
+    <script type="module" src='./counter-element.mjs'></script>
 </head>
 <body>
     <simple-counter counter="100"></simple-counter>
