added File Viewer

--- a/assets/style/scss/main.scss
+++ b/assets/style/scss/main.scss
@@ -20,6 +20,7 @@
 @import 'components/questionBox';
 @import 'components/figures';
 @import 'components/taskCard';
+@import 'components/fileViewer';
 
 @import 'pages/home';
 
