--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -213,6 +213,11 @@ task-card {
   margin: 1rem;
 }
 
+file-viewer {
+  margin: 0 auto;
+  max-width: 100%;
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
