Alles vorbereitet um die Daten einzupflegen

--- a/assets/js/components/lit/TabView/index.html
+++ b/assets/js/components/lit/TabView/index.html
@@ -5,16 +5,24 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <script src="Tab.mjs" type="module"></script>
     <script src="TabViewer.mjs" type="module"></script>
 </head>
 <body>
     <h1>Tab viewport</h1>
 
-    <tab-viewer>
-        <simple-tab title="Titel"><code>Test</code></simple-tab>
-        <simple-tab title="Titel"><code>Test</code></simple-tab>
-    </tab-viewer>
-
+    <example-tabs>
+        <example-tab title="Tab 1">
+          <p>This is the first tab.</p>
+        </example-tab>
+    
+        <example-tab title="Tab 2">
+          <p>This is the second tab.</p>
+        </example-tab>
+    
+        <example-tab title="Tab 3">
+          <p>This is the third tab.</p>
+        </example-tab>
+      </example-tabs>
+      
 </body>
 </html>
