--- a/assets/style/scss/abstracts/_colors.scss
+++ b/assets/style/scss/abstracts/_colors.scss
@@ -1,5 +1,5 @@
 $primary-color: #b8ccc1;
-$secondary-color:rgba(58, 108, 100 , 1); 
+$secondary-color:#3a6c64; 
 $background-color: #3a3434;
 $background-color-darker: rgb(34, 25, 25);
 $background-color-darker-opac: rgba(34, 25, 25, 0.9);
