--- a/assets/style/scss/base/_reset.scss
+++ b/assets/style/scss/base/_reset.scss
@@ -17,3 +17,25 @@ acronym{
     text-decoration: underline 2px solid $primary-color;
     cursor: help;
 }
+
+  /* width */
+  ::-webkit-scrollbar {
+    width: 10px;
+    }
+
+    /* Track */
+    ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+    }
+    
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+    background: #b8ccc1; 
+    border-radius: 10px;
+    }
+
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+    background: #3a3434; 
+    }
