--- a/assets/style/scss/main.scss
+++ b/assets/style/scss/main.scss
@@ -21,6 +21,8 @@
 @import 'components/figures';
 @import 'components/taskCard';
 @import 'components/fileViewer';
+@import 'components/embedBrowser';
+@import 'components/tabViewer';
 
 @import 'pages/home';
 
