--- a/assets/style/scss/abstracts/_colors.scss
+++ b/assets/style/scss/abstracts/_colors.scss
@@ -1,5 +1,7 @@
 $primary-color: #b8ccc1;
+$primary-color-hover: #93aa9d;
 $secondary-color:#3a6c64; 
+$secondary-color-hover: #25443f;
 $background-color: #3a3434;
 $background-color-darker: rgb(34, 25, 25);
 $background-color-darker-opac: rgba(34, 25, 25, 0.9);
