--- a/assets/style/scss/abstracts/_colors.scss
+++ b/assets/style/scss/abstracts/_colors.scss
@@ -1,4 +1,5 @@
 $primary-color: #b8ccc1;
+$primary-color-hover: #6f8177;
 $secondary-color:#3a6c64; 
 $background-color: #3a3434;
 $background-color-darker: rgb(34, 25, 25);
