--- a/assets/style/scss/base/_typography.scss
+++ b/assets/style/scss/base/_typography.scss
@@ -9,3 +9,9 @@ h1, h2, h3{
 typing-field{
     padding-left: 5%;
 }
+
+reference-source{
+    font-style: italic;
+    color: #bf5c2a;
+    display: inline;
+}
