Alle Aufgaben aus Aufgabe 3 aufgesplittet

--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -361,6 +361,16 @@ acronym, abbr {
   background: #3a3434;
 }
 
+.padding-list {
+  padding-left: 1rem;
+  list-style: none;
+}
+
+.padding-list li::before {
+  content: "\23F9 \00a0";
+  color: #b8ccc1;
+}
+
 * {
   font-family: 'Fredoka', sans-serif;
 }
