live Preview weiter bearbeitet

--- a/assets/js/components/lit/js-console/index.html
+++ b/assets/js/components/lit/js-console/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <script type="module" src='JsConsole.mjs'></script>
+    <script type="module" src="JsConsole.mjs"></script>
 </head>
+<style>body{margin: 0;}</style>
 <body>
-    <h1>JS-Console</h1>
-    <js-console src="/assets/js/components/lit/js-console/example.js"></js-console>
+
+   <js-console src="test.js"></js-console>
+    
 </body>
 </html>
