--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -164,6 +164,12 @@ aside ul li.active,
   padding: 0 5%;
 }
 
+@media only screen and (max-width: 600px) {
+  #html-section {
+    padding: 0 1rem;
+  }
+}
+
 #side-wrapper {
   min-height: 100vh;
   display: -ms-grid;
@@ -309,7 +315,7 @@ example-tabs::part(tab-selected) {
 
 example-tab {
   width: 100%;
-  padding: 2rem;
+  padding: 1rem;
 }
 
 example-tab h3 {
