--- a/assets/style/scss/layout/_main.scss
+++ b/assets/style/scss/layout/_main.scss
@@ -26,5 +26,10 @@
     justify-content: center;
     flex-direction: column;
     padding: 0 5%;
-
 }
+
+@media only screen and (max-width: 600px) {
+    #html-section{
+        padding: 0 1rem;
+    }
+  }
